# MultAgent-Local-

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1  run_app.py  run_cli.py
src/command_agent/: __init__.py  __main__.py  agent.py  allowed_commands.py  app.py  config.py  executor.py  formatters.py  prompts.py  terminal.py
tests/: test_config.py  test_executor.py  test_terminal.py
